--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,23 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".ModuleActivity"/>
-        <activity android:name=".CourseActivity" />
-        <activity android:name=".PaperActivity" />
-        <activity android:name=".PaperSummaryActivity" >
+        <activity android:name=".ModuleActivity" />
+        <activity android:name=".CourseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PaperActivity" />
+        <activity android:name=".PaperSummaryActivity" />
         <activity android:name=".QuestionActivity" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".ReviewActivity" />
-        <activity android:name=".ConnectionErrorActivity"/>
+        <activity android:name=".ConnectionErrorActivity" />
+        <activity android:name=".InstitutionActivity"/>
     </application>
 
 </manifest>
