pre-matric customizations

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ModuleActivity" />
+        <activity android:name=".ModuleActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".CourseActivity"/>
         <activity android:name=".PaperActivity" />
         <activity android:name=".PaperSummaryActivity" />
@@ -21,11 +26,6 @@
         <activity android:name=".ResultActivity" />
         <activity android:name=".ReviewActivity" />
         <activity android:name=".ConnectionErrorActivity" />
-        <activity android:name=".InstitutionActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".InstitutionActivity"/>
     </application>
 </manifest>
