--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
