login screen added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tecknologick.studybuddy">
-
     <!-- permissions -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -13,19 +12,32 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ModuleActivity" >
+
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CourseActivity"/>
+        <activity android:name=".ModuleActivity">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".CourseActivity" />
         <activity android:name=".PaperActivity" />
         <activity android:name=".PaperSummaryActivity" />
         <activity android:name=".QuestionActivity" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".ReviewActivity" />
         <activity android:name=".ConnectionErrorActivity" />
-        <activity android:name=".InstitutionActivity"/>
+        <activity android:name=".InstitutionActivity" />
     </application>
+
 </manifest>
